need to fix text overflow in card-menu

--- a/css/index.css
+++ b/css/index.css
@@ -342,25 +342,95 @@ html {
   padding: 15px;
 }
 
+.restaurant-menu .cards {
+  row-gap: 20px;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  border: 1px solid black;
+}
+
 .card-menu {
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
+  max-width: 400px;
+  height: 100px;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  border-radius: 15px;
+  -webkit-box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.2);
+          box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.2);
+  overflow: hidden;
 }
 
-.card-menu:hover .card__validation {
-  display: block;
+.card-menu .card__title {
+  padding-top: 1em;
+  padding-left: 1em;
+  font-size: 20px;
+  font-weight: bold;
+  text-overflow: ellipsis;
 }
 
-.card-menu:hover .card__price {
-  display: none;
+.card-menu .card__subtitle {
+  padding-left: 1em;
+  padding-bottom: 1em;
+  font-size: 17px;
+  font-weight: 300;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
+}
+
+.card-menu .card__price {
+  padding-right: 1em;
+  padding-bottom: 1em;
+  font-weight: bold;
+}
+
+.card-menu .col {
+  border: 1px solid black;
 }
 
 .card-menu .col:first-child {
-  -ms-flex-preferred-size: 80%;
-      flex-basis: 80%;
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+}
+
+.card-menu .col:last-child {
+  -ms-flex-preferred-size: 35%;
+      flex-basis: 35%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
 }
 
 .card-menu .card__validation {
   display: none;
+  min-width: 60px;
+  background-color: #99E2D0;
+  height: 100%;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.card-menu .card__validation .fa-circle-check {
+  color: white;
+  font-size: 25px;
+}
+
+.card-menu:hover .card__validation {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
 }
 /*# sourceMappingURL=index.css.map */
