--- a/css/pages/_restaurant.scss
+++ b/css/pages/_restaurant.scss
@@ -2,27 +2,88 @@
 
     padding: 15px;
 
+    .cards {
+        row-gap: 20px;
+        justify-content: center;
+        border: 1px solid black;
+    }
+
 }
 
 .card-menu {
-    flex-wrap: wrap;
 
-    &:hover {
-        .card__validation {
-            display: block;
+    //flex-wrap: wrap;
+
+    max-width: 400px;
+    height: 100px;
+    justify-content: center;
+    border-radius: 15px;
+    box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0, 0, 0, 0.2);
+    
+    overflow: hidden;
+
+    .card__title {
+        padding-top: 1em;
+        padding-left: 1em;
+
+        font-size: 20px;
+        font-weight: bold;
+        text-overflow: ellipsis;
+    }
+
+    .card__subtitle {
+        padding-left: 1em;
+        padding-bottom: 1em;
+
+        font-size: 17px;
+        font-weight: 300;
+        text-overflow: ellipsis;
+        overflow: hidden; 
+        white-space: nowrap;
+
+    }
+
+    .card__price {
+        padding-right: 1em;        
+        padding-bottom: 1em;
+
+        font-weight: bold;
+    }
+
+    .col {
+        border: 1px solid black;
+
+        &:first-child {
+            flex: 1;
         }
 
-        .card__price {
-            display: none;
+        &:last-child {
+            flex-basis: 35%;
+
+            display: flex;
+            align-items: flex-end;
+            justify-content: flex-end;
         }
     }
 
-    .col:first-child {
-        flex-basis: 80%;
-    }
 
     .card__validation { 
         display: none;
+        min-width: 60px;
+        background-color: $turquoise;
+        height: 100%;
+        justify-content: center;
+        align-items: center;
+        
+        .fa-circle-check {
+            color: white;
+            font-size: 25px;
+        }
     }
 
+    &:hover {
+        .card__validation {
+            display: flex;
+        }
+    }
 }
